syntax="proto3";
option java_package="org.sid.stubs";
service BankService {
  rpc convert(ConvertCurrencyRequest) returns (ConvertCurrencyResponse);
  rpc getStream(ConvertCurrencyRequest) returns (stream ConvertCurrencyResponse);
  rpc performStream(stream ConvertCurrencyRequest) returns (ConvertCurrencyResponse);
  rpc fullCurrencyStream(stream ConvertCurrencyRequest) returns (stream ConvertCurrencyResponse);
}

message ConvertCurrencyRequest{
  string currencyFrom=1;
  string currencyTo=2;
  double amount=3;
}

message ConvertCurrencyResponse{
  string currencyFrom=1;
  string currencyTo=2;
  double amount=3;
  double result=4;
}